cambio en los nombres de archivos

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ h1{
 }
 
 header {
-    background-image: url(../img/fondo_patitas.jpg);
+    background-image: url(../img/fondopatitas.jpg);
     background-size: 120px;
     background-repeat: repeat;
     width: 100%;
